k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-service
  labels:
    name: product-service
